# stock-selector

./: .gitignore  README.md  main.py  pyproject.toml
agents/: intent_agent.py  model.py  task_decompose_agent.py  task_execute_agent.py
settings/: __init__.py  logger_setting.py
tools/: polygon_tools.py  ticker_financial_action_tools.py  ticker_financial_health_tools.py  ticker_financial_tools.py  ticker_query_tools.py
utils/: prompt_generator.py
workflow/: planner.py
